--- a/simple-digital-clock/clock.html
+++ b/simple-digital-clock/clock.html
@@ -1,11 +1,15 @@
-<html>
-    <head>
-        <title>Digital Clock</title>
-    </head>
-    <body>
-        <h1>Digital Clock</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Simple Digital Clock</title>
+</head>
 
-        <div class="clock"></div>
-        <script src="clock.js"></script>
-    </body>
+<body>
+    <h1>Digital Clock</h1>
+    <div class="clock"></div>
+    <script src="clock.js"></script>
+</body>
 </html>
